--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,13 +37,13 @@ p, a, label {
     color: #777;
     text-decoration: none;
 }
-.main-header-par {
+.navbar-parent {
     height: 100px;
     width: 100%;
     background-color: #fff;
     border-bottom: 2px solid #ccc;
 }
-.main-header-chi {
+.navbar-child {
     height: 100px;
     width: 960px;
     margin: 0 auto;
@@ -72,7 +72,7 @@ p, a, label {
 }
 .main-content {
     background-color: #fff;
-    width: 960px;
+    width: 900px;
     padding: 30px;
     margin: 30px auto;
     border: 1px solid #ddd;
@@ -93,6 +93,7 @@ p, a, label {
 .foot {
     width: 100%;
     position: fixed;
+    z-index: -1;
     bottom: 0;
     border-top: 8px solid #4aaaa5;
     background-color: #666;
@@ -143,4 +144,33 @@ textarea {
     width: 99.5%;
     padding-left: 0.5%;
     line-height: 1.25rem;
+}
+#foot-space {
+    padding: 20px;
+}
+
+@media only screen and (max-width: 980px) {
+    .navbar-child {
+        width: 680px;
+    }
+    .main-content {
+        width: 680px;
+    }
+ }
+
+@media only screen and (max-width: 768px) {
+    .navbar-child {
+        width: 560px;
+    }
+    .main-content {
+        width: 560px;
+    }
+}
+@media only screen and (max-width: 640px) {
+    .navbar-child {
+        width: 400px;
+    }
+    .main-content {
+        width: 400px;
+    }
 }
